--- a/index.html
+++ b/index.html
@@ -1,84 +1,125 @@
-export default {
-  async fetch(req) {
-    const H = {
-      "content-type": "application/json; charset=utf-8",
-      "access-control-allow-origin": "*",
-      "access-control-allow-methods": "GET, OPTIONS",
-      "access-control-allow-headers": "Content-Type"
-    };
-    if (req.method === "OPTIONS") return new Response(null, { headers: H });
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>أسعار الذهب بالدينار الكويتي — 24/22/21/18</title>
+  <style>
+  :root{--bg:#f7f7f7;--card:#fff;--text:#111;--muted:#6b7280;--border:#e5e7eb}
+  *{box-sizing:border-box}
+  html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif}
+  .container{max-width:980px;margin:24px auto;padding:16px}
+  h1{margin:0 0 6px;text-align:center;font-size:clamp(22px,4vw,32px)}
+  .meta{text-align:center;color:var(--muted);margin:0 0 16px}
+  .layout{display:grid;grid-template-columns:1fr;gap:14px}
+  @media(min-width:900px){.layout{grid-template-columns:1fr 280px}}
+  .card{background:var(--card);border:1px solid var(--border);border-radius:12px;padding:10px}
+  .price-table{width:100%;border-collapse:collapse;background:var(--card);border-radius:12px;overflow:hidden;box-shadow:0 1px 4px rgba(0,0,0,.05)}
+  .price-table th,.price-table td{padding:12px 14px;border-bottom:1px solid var(--border);text-align:center}
+  .price-table thead th{background:#f3f4f6;font-weight:600}
+  .price-table tbody tr:last-child td{border-bottom:none}
+  .err{margin-top:12px;color:#b91c1c;text-align:center;direction:ltr;white-space:pre-wrap}
+  .widget-title{margin:6px 8px 10px;font-size:14px;color:var(--muted);text-align:center}
+  </style>
+</head>
+<body>
+  <main class="container">
+    <h1>أسعار الذهب بالدينار الكويتي</h1>
+    <p class="meta">
+      تحديث كل <strong>10</strong> ثوانٍ • آخر تحديث: <span id="lastUpdate">—</span>
+      • المصدر: <span id="src">—</span>
+    </p>
 
-    const okNum = (x) => Number.isFinite(x) && x > 0;
-    const toNum = (s) =>
-      Number(String(s).replace(/[^\d.,]/g, "").replace(/,/g, "").replace(/(\d+)\.(\d+)\.(\d+)/, "$1.$2$3"));
+    <section class="layout">
+      <!-- يسار: جدول العيارات -->
+      <div class="card">
+        <table class="price-table">
+          <thead><tr><th>العيار</th><th>السعر للغرام (د.ك)</th></tr></thead>
+          <tbody>
+            <tr><td>عيار 24</td><td id="k24">—</td></tr>
+            <tr><td>عيار 22</td><td id="k22">—</td></tr>
+            <tr><td>عيار 21</td><td id="k21">—</td></tr>
+            <tr><td>عيار 18</td><td id="k18">—</td></tr>
+          </tbody>
+        </table>
+        <p id="err" class="err"></p>
+      </div>
 
-    const RE = {
-      k24: [
-        /karat\s*24\s*\(Gm\)\s*([\d.,]+)\s*KWD/i,
-        /عيار\s*24[\s\S]{0,80}?([\d.,]+)\s*(?:د\.?ك|KWD)/i
-      ],
-      k22: [
-        /karat\s*22\s*\(Gm\)\s*([\d.,]+)\s*KWD/i,
-        /عيار\s*22[\s\S]{0,80}?([\d.,]+)\s*(?:د\.?ك|KWD)/i
-      ],
-      k21: [
-        /karat\s*21\s*\(Gm\)\s*([\d.,]+)\s*KWD/i,
-        /عيار\s*21[\s\S]{0,80}?([\d.,]+)\s*(?:د\.?ك|KWD)/i
-      ],
-      k18: [
-        /karat\s*18\s*\(Gm\)\s*([\d.,]+)\s*KWD/i,
-        /عيار\s*18[\s\S]{0,80}?([\d.,]+)\s*(?:د\.?ك|KWD)/i
-      ],
-    };
-
-    const extract = (html) => {
-      const take = (arr) => {
-        for (const re of arr) {
-          const m = html.match(re);
-          if (m) {
-            const n = toNum(m[1]);
-            if (okNum(n)) return n;
+      <!-- يمين: ويدجت TradingView (عرض فقط) -->
+      <aside class="card">
+        <div class="widget-title">سعر الذهب المباشر (XAUUSD) — عرض فقط</div>
+        <div class="tradingview-widget-container">
+          <div class="tradingview-widget-container__widget"></div>
+          <script async type="text/javascript"
+            src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js">
+          {
+            "symbol": "OANDA:XAUUSD",
+            "locale": "ar",
+            "dateRange": "1D",
+            "colorTheme": "light",
+            "isTransparent": false,
+            "autosize": true,
+            "width": 260,
+            "height": 300
           }
-        }
-        return NaN;
-      };
-      return { k24: take(RE.k24), k22: take(RE.k22), k21: take(RE.k21), k18: take(RE.k18) };
-    };
+          </script>
+        </div>
+      </aside>
+    </section>
+  </main>
 
-    const sources = [
-      "https://daralsabaek.com/home",      // ما طلبته
-      "https://daralsabaek.com/",          // الصفحة الرئيسية
-      "https://daralsabaek.com/gold-calculator",
-      "https://daralsabaek.com/chart"
-    ];
+  <script>
+    // رابط الـWorker الخاص بك (JSON من دار السبائك)
+    const WORKER_JSON = "https://husseinkadri.sfa7000.workers.dev/";
 
-    // جرّب المصادر بالتتابع حتى تحصل على أرقام صحيحة
-    for (const src of sources) {
-      try {
-        const r = await fetch(src, { cf: { cacheTtl: 8, cacheEverything: true } });
-        if (!r.ok) continue;
-        const html = await r.text();
-        const rates = extract(html);
-        if ([rates.k24, rates.k22, rates.k21, rates.k18].every(okNum)) {
-          return new Response(JSON.stringify({ source: src, updatedAt: new Date().toISOString(), rates }), { headers: H });
-        }
-      } catch (_) {}
+    const BASE_MS = 10_000; let nextMs = BASE_MS;
+    const $$  = id => document.getElementById(id);
+    const fmt = n => (Number.isFinite(n) ? n.toFixed(3) : "—");
+
+    function stamp(){
+      const d=new Date();
+      const hh=String(d.getHours()).padStart(2,"0"),
+            mm=String(d.getMinutes()).padStart(2,"0"),
+            ss=String(d.getSeconds()).padStart(2,"0");
+      $$("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
     }
 
-    // احتياط حكومي لو فشلت كل الصفحات
-    try {
-      const r2 = await fetch("https://www.moci.gov.kw/ar/market-prices/gold/", { cf: { cacheTtl: 30, cacheEverything: true } });
-      const html2 = await r2.text();
-      const grab = (label) => {
-        const m = html2.match(new RegExp(label + "[\\s\\S]{0,120}?(\\d+[\\.,]\\d+)", "im"));
-        return m ? toNum(m[1]) : NaN;
-      };
-      const rates = { k24: grab("عيار\\s*24"), k22: grab("عيار\\s*22"), k21: grab("عيار\\s*21"), k18: grab("عيار\\s*18") };
-      if ([rates.k24, rates.k22, rates.k21, rates.k18].every(okNum)) {
-        return new Response(JSON.stringify({ source: "https://www.moci.gov.kw/ar/market-prices/gold/", updatedAt: new Date().toISOString(), rates }), { headers: H });
-      }
-    } catch (_) {}
+    async function fetchRates(){
+      const url = WORKER_JSON + "?_=" + Date.now(); // كسر الكاش
+      const r = await fetch(url, { cache:"no-store", mode:"cors" });
+      const text = await r.text();
+      let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
+      return { ok: r.ok, status: r.status, data };
+    }
 
-    return new Response(JSON.stringify({ error: "parse_failed" }), { status: 502, headers: H });
-  }
-};
+    function fill({k24, k22, k21, k18}){
+      $$("k24").textContent = fmt(k24);
+      $$("k22").textContent = fmt(k22);
+      $$("k21").textContent = fmt(k21);
+      $$("k18").textContent = fmt(k18);
+    }
+
+    async function tick(){
+      try{
+        const res = await fetchRates();
+        const rates = res.data?.rates;
+        if(!res.ok || !rates || ![rates.k24, rates.k22, rates.k21, rates.k18].every(Number.isFinite)){
+          throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,280)}`);
+        }
+        fill(rates);
+        $$("src").textContent = (res.data.source || "").replace(/^https?:\/\//, "");
+        $$("err").textContent = "";
+        stamp(); nextMs = BASE_MS;
+      }catch(e){
+        $$("err").textContent = "Error: " + (e?.message || e);
+        $$("src").textContent = "—";
+        nextMs = Math.min(nextMs * 2, 60_000); // backoff
+      }finally{
+        setTimeout(tick, nextMs);
+      }
+    }
+
+    stamp(); tick();
+  </script>
+</body>
+</html>
